Remove tests directory

--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
                 <p>Convert PDF pages to PNG or JPEG images. Select specific pages and download them individually.</p>
             </a>
 
+            <a href="datetime-utilities.html" class="tool-card">
+                <span class="tool-icon">🕒</span>
+                <h3>DateTime Utilities</h3>
+                <p>Convert between time zones, convert Unix timestamps, and format date/time strings.</p>
+            </a>
+
             <!-- Future tools will go here -->
         </div>
     </main>
