--- a/index.html
+++ b/index.html
@@ -74,10 +74,22 @@
                 <p>Convert PDF pages to PNG or JPEG images. Select specific pages and download them individually.</p>
             </a>
 
-            <a href="datetime-utilities.html" class="tool-card">
+            <a href="timezone-converter.html" class="tool-card">
                 <span class="tool-icon">🕒</span>
-                <h3>DateTime Utilities</h3>
-                <p>Convert between time zones, convert Unix timestamps, and format date/time strings.</p>
+                <h3>Timezone Converter</h3>
+                <p>Convert a date/time between IANA timezones and inspect DST information.</p>
+            </a>
+
+            <a href="unix-timestamp.html" class="tool-card">
+                <span class="tool-icon">🔁</span>
+                <h3>Unix Timestamp Converter</h3>
+                <p>Convert Unix timestamps to human-readable dates and convert dates to Unix timestamps.</p>
+            </a>
+
+            <a href="datetime-format-converter.html" class="tool-card">
+                <span class="tool-icon">🔤</span>
+                <h3>DateTime Format Converter</h3>
+                <p>Parse and reformat date/time strings using custom or standard formats.</p>
             </a>
 
             <!-- Future tools will go here -->
