--- a/pdf-to-image.html
+++ b/pdf-to-image.html
@@ -150,6 +150,7 @@
         </article>
 
         <article id="status"></article>
+        <p style="margin-top:1rem"><a href="index.html">← Back to Tools</a></p>
     </main>
 
     <script>
