--- a/timezone-converter.html
+++ b/timezone-converter.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timezone Converter</title>
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
     <style>
         .tz-flex { display:flex; gap:1rem; align-items:center; flex-wrap:wrap }
