Make search box placeholder text italic

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
             font-size: 0.85rem;
         }
 
+        .search-box input::placeholder {
+            font-style: italic;
+        }
+
         .tool-card.hidden {
             display: none;
         }
