--- a/pdf-form-editor.html
+++ b/pdf-form-editor.html
@@ -80,6 +80,10 @@
             border: 1px solid #ddd;
         }
 
+        .fields-container {
+            pointer-events: none;
+        }
+
         .field-overlay {
             position: absolute;
             border: 2px solid #6b8dd6;
@@ -90,6 +94,7 @@
             justify-content: center;
             cursor: move;
             transition: border-color 0.2s;
+            pointer-events: auto;
         }
 
         .field-overlay:hover {
