Remove ugly date icon

--- a/timezone-converter.html
+++ b/timezone-converter.html
@@ -231,7 +231,7 @@
                     <span>Date (default: current date)</span>
                     <div class="date-picker-wrapper">
                         <input type="date" id="dateInput">
-                        <button type="button" class="date-picker-button" aria-label="Open calendar picker">📅</button>
+                        <button type="button" class="date-picker-button" aria-label="Open calendar picker"></button>
                     </div>
                 </label>
 
