--- a/unix-timestamp.html
+++ b/unix-timestamp.html
@@ -192,7 +192,7 @@
                     Date & time (leave empty for now)
                     <div class="date-picker-wrapper">
                         <input type="datetime-local" id="dateInput">
-                        <button type="button" class="date-picker-button" aria-label="Open calendar picker">📅</button>
+                        <button type="button" class="date-picker-button" aria-label="Open calendar picker"></button>
                     </div>
                 </label>
                 <label>
