--- a/date-calculator.html
+++ b/date-calculator.html
@@ -348,7 +348,7 @@
                         <span>Start</span>
                         <div class="date-picker-wrapper">
                             <input type="date" id="startDate">
-                            <button type="button" class="date-picker-button" aria-label="Open calendar picker">📅</button>
+                            <button type="button" class="date-picker-button" aria-label="Open calendar picker"></button>
                         </div>
                     </label>
 
@@ -356,7 +356,7 @@
                         <span>End</span>
                         <div class="date-picker-wrapper">
                             <input type="date" id="endDate">
-                            <button type="button" class="date-picker-button" aria-label="Open calendar picker">📅</button>
+                            <button type="button" class="date-picker-button" aria-label="Open calendar picker"></button>
                         </div>
                     </label>
 
